--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,16 @@
-# Cargo.toml
-
 [package]
 name = "backend"
 version = "0.1.0"
-edition = "2024" # Updated to 2024 as per your request
+edition = "2021"
 
 [dependencies]
 actix-web = "4"
-diesel = { version = "2.1.0", features = ["postgres", "r2d2"] } # Using PostgreSQL, you can change if needed
+sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
+serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
-actix = "0.13" # For Actix actors (WebSockets)
+actix = "0.13"
 actix-cors = "0.6"
-actix-files = "0.6" # For serving static files if needed, useful for frontend redirection
-chrono = { version = "0.4", features = ["serde"] } # For handling timestamps
-futures = "0.3" # For async operations, often used with WebSockets
-jsonwebtoken = "9" # For JWT authentication
-serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
-serde_json = "1.0" # For JSON manipulation
-uuid = { version = "1.6", features = ["serde", "v4"] } # For generating UUIDs
-validator = { version = "0.16", features = ["derive"] } # For data validation
+jsonwebtoken = "9"
+serde_json = "1.0"
+validator = { version = "0.16", features = ["derive"] }
