--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ actix-cors = "0.6"
 jsonwebtoken = "9"
 serde_json = "1.0"
 validator = { version = "0.16", features = ["derive"] }
+async-trait = "0.1"
