--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-migration = { path = "./migration" }
-sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "runtime-actix-native-tls"] }
+# migration = { path = "./migration" }
+# sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "runtime-actix-native-tls"] }
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "migrate", "chrono"] }
 dotenvy = "0.15"
 tokio = { version = "1", features = ["full"] }
 actix-web = "4"
@@ -20,3 +21,4 @@ async-trait = "0.1"
 utoipa = { version = "3.5.0", features = ["actix_extras"] }
 utoipa-actix-web = "0.1.0"
 utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
+sqlx_clean_querybuilder = "0.1.7"
